fix: text overflow with german stuff!

--- a/web/src/components/Info/index.module.css
+++ b/web/src/components/Info/index.module.css
@@ -125,3 +125,17 @@
   font-size: 1.05vw;
   filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.45));
 }
+
+.text {
+  font-size: 1.5vw;
+  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
+    0px 4px 7px rgba(0, 0, 0, 0.25);
+  font-family: 'Black';
+  width: 31vw;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  position: absolute;
+  padding-left: 0.75vw;
+  padding-top: 0.7vh;
+}
